--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
       <div id="front" class="album">
         <div id="title-box">
 
-          <!-- Level 4 'PHARRELL WILLIAMS' Header -->
+          <h1>'PHARRELL WILLIAMS'</h1>
 
-          <!-- Level 2 'HAPPY' Header -->
+          <h2>'HAPPY' Header</h2>
 
-          <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
+          <h3>'FROM DESPICABLE ME...'</h3>
 
         </div>
       </div>
