--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 
         <span>PHARRELLWILLIAMS.COM</span>
 
-        [columbia-logo.png]
+        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png">
 
-        COLUMBIARECORDS.COM
+        <span>COLUMBIARECORDS.COM</span>
 
-        [sony-logo.png]
+
 
 
 
@@ -49,7 +49,7 @@
 
         <br>
 
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
+        <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png">
 
       </div>
     </div>
